# survey-agent

./: .env.example  .gitignore  ERROR.md  PLAN.md  README.md  REQUIREMENTS.md  RUNTIME.md  STATUS.md  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
prompts/: few_shot_examples.json  system_prompt.md
src/survey_agent/: __init__.py  config.py  main.py
src/survey_agent/core/: __init__.py  agent.py  state_machine.py
src/survey_agent/decision/: __init__.py  llm_client.py  prompt_manager.py  response_parser.py
src/survey_agent/execution/: __init__.py  action_executor.py  feedback_loop.py  human_interface.py
src/survey_agent/perception/: __init__.py  browser_manager.py  injector.py
src/survey_agent/transformation/: __init__.py  html_cleaner.py  layout_extractor.py
src/survey_agent/utils/: __init__.py  logger.py  screenshot.py
tests/: conftest.py
tests/fixtures/mock_pages/: matrix_scale.html  simple_radio.html  slider.html
tests/test_decision/: test_llm_client.py  test_response_parser.py
tests/test_perception/: test_injector.py
tests/test_transformation/: test_html_cleaner.py  test_layout_extractor.py
